# OpenHousePopulator

./: .gitignore  Cargo.toml  README.md  settings.toml  setup.sh
old/src/core/test/: main.py
old/src/interface/: parameters.py  process.py
res/: Residences_Germany_GV2Q.csv  elements_query.ovql  point_query.ovql
src/: address_mapping.py  color.py  config.rs  datalayer.rs  done_box_logging.py  geometry.rs  lib.rs  main.py  main.rs  memory.gpkg-shm  memory.gpkg-wal  overpass.rs  parameters.py  pbf.rs  populator.rs  process.py
src/core/: Cargo.toml  pyproject.toml
src/core/res/: query.ovql
src/core/src/: lib.rs  overpass.rs  populator.rs
src/helpers/: address_mapping.py  done_box_logging.py
src/interface/: OpenHousePopulator
src/parser/: housenumber.rs  mod.rs  parsertest.rs
